# gpkg

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: bootstrap-with-uv.sh
src/gpkg/: __init__.py  __main__.py  _api.py  _cli.py  _models.py  _package.py  _platform.py  _registry.py  _storage.py  _utils.py  cli.py
src/gpkg/_packages/: bat.py  eza.py  fd.py  jq.py  lsd.py  ripgrep.py  starship.py  uv.py  xh.py  yq.py
tests/: conftest.py  test_gpkg_api.py
