[project]
name = "gpkg"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "githubkit>=0.11",
    "rich>=13.8",
    "typer>=0.12",
]

[project.scripts]
gpkg = "gpkg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.8",
]
